collapse correct

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,15 @@ a {
   
 }
 
+p {
+  font-size: 12px ;
+  
+  @media only screen and (min-width: 768px) {
+    
+    font-size: 18px ;
+  }
+}
+
 main {
   max-width: 1280px;
   width: 100%;
