--- a/src/components/layout/navBar/NavBar.scss
+++ b/src/components/layout/navBar/NavBar.scss
@@ -7,7 +7,7 @@ nav {
 nav a {
     text-transform: uppercase;
     margin-right: 1rem;
-
+    font-size: 12px ;
     @media only screen and (min-width: 450px) {
     margin-right: 2rem;
     }
